--- a/sandbox/Zaboom/Zaboom/Zaboom.csproj
+++ b/sandbox/Zaboom/Zaboom/Zaboom.csproj
@@ -68,6 +68,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SplitForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>SplitForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ZaboomForm.resx">
       <DependentUpon>ZaboomForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -85,6 +89,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="SplitForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplitForm.Designer.cs">
+      <DependentUpon>SplitForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ZaboomForm.cs">
       <SubType>Form</SubType>
