--- a/sandbox/Zaboom/Zaboom/Zaboom.csproj
+++ b/sandbox/Zaboom/Zaboom/Zaboom.csproj
@@ -35,12 +35,18 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="urakawa, Version=1.0.2379.19290, Culture=neutral">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\implementation\UrakawaToolkit\bin\Debug\urakawa.dll</HintPath>
+    </Reference>
     <Reference Include="UrakawaApplicationBackend, Version=1.0.2371.20524, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\UrakawaApplicationBackend\obj\Debug\UrakawaApplicationBackend.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Phrase.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="RenameAssetDialog.cs">
       <SubType>Form</SubType>
     </Compile>
