--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -92,8 +92,16 @@
     <Compile Include="Dialogs\UserProfile.Designer.cs">
       <DependentUpon>UserProfile.cs</DependentUpon>
     </Compile>
+    <Compile Include="Events\Node\ExpandViewToAllDepthsEventArgs.cs" />
+    <Compile Include="Events\Node\AddChildSectionEventArgs.cs" />
     <Compile Include="Events\Node\AddSiblingSectionEventArgs.cs" />
+    <Compile Include="Events\Node\BeginEditingSectionHeadingLabelEventArgs.cs" />
     <Compile Include="Events\Node\CreatedEventArgs.cs" />
+    <Compile Include="Events\Node\DecreaseSectionLevelEventArgs.cs" />
+    <Compile Include="Events\Node\IncreaseSectionLevelEventArgs.cs" />
+    <Compile Include="Events\Node\LimitViewToSectionDepthEventArgs.cs" />
+    <Compile Include="Events\Node\MoveSectionDownEventArgs.cs" />
+    <Compile Include="Events\Node\MoveSectionUpEventArgs.cs" />
     <Compile Include="Events\Project\StateChangedEventArgs.cs" />
     <Compile Include="Localizer.cs" />
     <Compile Include="messages.Designer.cs">
