--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -103,10 +103,12 @@
     <Compile Include="Events\Node\LimitViewToSectionDepthEventArgs.cs" />
     <Compile Include="Events\Node\MoveSectionDownEventArgs.cs" />
     <Compile Include="Events\Node\MoveSectionUpEventArgs.cs" />
+    <Compile Include="Events\Node\RenameSectionEventArgs.cs" />
     <Compile Include="Events\Project\StateChangedEventArgs.cs" />
     <Compile Include="Events\Sync\AddedChildNodeEventArgs.cs" />
     <Compile Include="Events\Sync\AddedSiblingNodeEventArgs.cs" />
     <Compile Include="Events\Sync\DeletedNodeEventArgs.cs" />
+    <Compile Include="Events\Sync\RenamedNodeEventArgs.cs" />
     <Compile Include="Localizer.cs" />
     <Compile Include="messages.Designer.cs">
       <AutoGen>True</AutoGen>
