--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -15,6 +15,7 @@
     <SignManifests>true</SignManifests>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetZone>LocalIntranet</TargetZone>
+    <SignAssembly>false</SignAssembly>
     <PublishUrl>C:\Documents and Settings\Julien Quint\My Documents\Urakawa\trunk\urakawa\application\sandbox\Publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,9 +26,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationVersion>0.1.2.648</ApplicationVersion>
+    <ApplicationVersion>0.1.2.650</ApplicationVersion>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -69,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CommandManager.cs" />
-    <Compile Include="Commands\TOC\AddChild.cs" />
+    <Compile Include="Commands\TOC\AddSection.cs" />
     <Compile Include="DescendantsVisitor.cs" />
     <Compile Include="Dialogs\EditSimpleMetadata.cs">
       <SubType>Form</SubType>
@@ -107,7 +107,9 @@
     <Compile Include="Events\Node\MoveSectionUpEventArgs.cs" />
     <Compile Include="Events\Node\RenameSectionEventArgs.cs" />
     <Compile Include="Events\Project\StateChangedEventArgs.cs" />
+    <Compile Include="Events\Strip\SelectedEventArgs.cs" />
     <Compile Include="Events\Sync\AddedChildNodeEventArgs.cs" />
+    <Compile Include="Events\Sync\AddedSectionNodeEventArgs.cs" />
     <Compile Include="Events\Sync\AddedSiblingNodeEventArgs.cs" />
     <Compile Include="Events\Sync\DeletedNodeEventArgs.cs" />
     <Compile Include="Events\Sync\RenamedNodeEventArgs.cs" />
@@ -191,8 +193,6 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleMetadata.cs" />
-    <Compile Include="Strips\SectionStrip.cs" />
-    <Compile Include="Strips\Strip.cs" />
     <Compile Include="UserControls\ProjectPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
