--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\TOC\AddSection.cs" />
+    <Compile Include="Commands\TOC\DeleteSection.cs" />
+    <Compile Include="Commands\TOC\Rename.cs" />
     <Compile Include="DescendantsVisitor.cs" />
     <Compile Include="Dialogs\EditSimpleMetadata.cs">
       <SubType>Form</SubType>
@@ -206,6 +208,7 @@
       <DependentUpon>TOCPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="UserProfile.cs" />
+    <Compile Include="Visitors\UndeleteSubtree.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
